Add *.inc extension pattern to C and C++

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -10,8 +10,8 @@ Asciidoc=*.asciidoc;*.adoc;
 ASM=*.asm;*.asm51;*.a51;
 Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
-C=*.c;*.h;*.xpm;
-C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
+C=*.c;*.h;*.inc;*.xpm;
+C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;*.inc;
 Clojure=*.clj;*.cljs;*.cljc;
 CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
