Improve implementation of deferred operations
- Move relevant functions and code to consider.c
- Reimplement delayed saving of session files
- Delay running of "document_show_tab" when an event source for the
  after-switch-page handler has already been initiated since it
  guarantees that a "document-activate" signal will already be emitted.
  The after-switch-page handler's runtime gets delayed if an event
  source for "document_show_tab" also exists allowing all
  "document_show_tab" events to finish first.
- Running of "document_try_focus" also gets delayed
- Actual non-delayed code for document_show_tab and document_try_focus
  were moved to document_show_tab_real and document_try_focus_real
- Reloading of all files, loading of files from the command-line, and
  remote loading of files are now also considered as delay factors
- Calls to gtk_main_iteration in actions that display a cancellable
  dialog are lightened up to prevent lock-ups with idle functions and
  also speed up operations
- The after-switch-page handler now also calls document_try_focus.
- configuration_open_files no longer calls document_show_tab with a NULL
  argument nor with the current document as it's not necessary.
- Also call document_try_focus post "show-tab" if focus hasn't changed
  within the "show-tab" process
- Only switch focus if the doc argument points to the current document
- Also delay ui_document_show_hide

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,6 +38,7 @@ geany_includedir = $(includedir)/geany
 geany_include_HEADERS = \
 	app.h \
 	build.h \
+	consider.h \
 	dialogs.h \
 	document.h \
 	editor.h \
@@ -70,6 +71,7 @@ libgeany_la_SOURCES = \
 	app.h \
 	build.c build.h \
 	callbacks.c callbacks.h \
+	consider.c consider.h \
 	dialogs.c dialogs.h \
 	document.c document.h \
 	editor.c editor.h \
